--- a/MvcLuceneSampleApp/MvcLuceneSampleApp.csproj
+++ b/MvcLuceneSampleApp/MvcLuceneSampleApp.csproj
@@ -81,9 +81,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="lucene_index\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
