--- a/MvcLuceneSampleApp/MvcLuceneSampleApp.csproj
+++ b/MvcLuceneSampleApp/MvcLuceneSampleApp.csproj
@@ -69,7 +69,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Lucene\LuceneSearch.cs" />
-    <Compile Include="Lucene\SampleData.cs" />
+    <Compile Include="Model\SampleData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
   </ItemGroup>
