some code cleanup, removed unused files, stylesheet added

--- a/MvcLuceneSampleApp/MvcLuceneSampleApp.csproj
+++ b/MvcLuceneSampleApp/MvcLuceneSampleApp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ViewModels\IndexViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\style.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
     <Content Include="Views\Web.config" />
